alert z-index fix

--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ button {
 }
 
 #alert-container {
-    z-index: 5;
+    z-index: 20;
     position: fixed;
     top: 10vw;
     left: 50vw;
